[package]
name = "wlan-play"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

default-run = "wlan_play"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.7"
thrussh = { version = "0.30.1", optional = true }
thrussh-keys = { version = "0.19.0", optional = true }
rhai = "0.19.5"
tokio = { version = "0.3", features = ["full"] }
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
url = { version = "2.2.0", features = ["serde"] }
log = "0.4.11"
env_logger = "0.8.1"
async-trait = "0.1.41"
futures = "0.3"
regex = "1.4.2"
deku = "0.9.1"
structopt = "0.3.20"
hex = "0.4.2"

[features]
default = []
ssh = [ "thrussh", "thrussh-keys" ]
