[package]
name = "wlan-play"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

default-run = "wlan_play"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.7"
thrussh = { version = "0.33.5", optional = true }
thrussh-keys = { version = "0.21.0", optional = true }
rhai = "1.3.0"
tokio = { version = "1.15.0", features = ["full"] }
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
url = { version = "2.2.0", features = ["serde"] }
log = "0.4.11"
env_logger = "0.9.0"
async-trait = "0.1.41"
futures = "0.3"
regex = "1.4.2"
deku = "0.12.5"
structopt = "0.3.20"
hex = "0.4.2"
pcap-parser = { version = "0.13.0", features = ["serialize"] }
crc = "1.8.1"

[features]
default = []
ssh = ["thrussh", "thrussh-keys"]
